# SnakeGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Apple.hpp  AssetsManager.hpp  Config.hpp  Game.hpp  Random.hpp  Snake.hpp
src/: Apple.cpp  AssetsManager.cpp  Game.cpp  Main.cpp  Random.cpp  Snake.cpp
